--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@preline/overlay": "^2.0.2",
     "next": "14.1.0",
     "preline": "^2.0.3",
     "react": "^18",
