--- a/package.json
+++ b/package.json
@@ -4,26 +4,27 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "turbo-dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@preline/overlay": "^2.0.2",
-    "next": "14.1.0",
-    "preline": "^2.0.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "@preline/overlay": "latest",
+    "next": "latest",
+    "preline": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "autoprefixer": "latest",
+    "eslint": "latest",
+    "eslint-config-next": "latest",
+    "postcss": "latest",
+    "tailwindcss": "latest",
+    "typescript": "latest"
   }
 }
