--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.35",
     "react-firebase-hooks": "^5.1.1",
+    "react-toastify": "^10.0.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
