--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^10.6.0",
+    "@hookform/error-message": "^2.0.1",
+    "@supabase/ssr": "^0.2.0",
     "next": "14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
@@ -24,7 +27,6 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.35",
-    "react-firebase-hooks": "^5.1.1",
     "react-toastify": "^10.0.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
