--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/error-message": "^2.0.1",
     "@supabase/ssr": "^0.2.0",
     "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "next": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
